Navbar tweet button redirects and marks tweet box as focused

--- a/frontend/src/main/resources/templates/fragment/header.html
+++ b/frontend/src/main/resources/templates/fragment/header.html
@@ -76,6 +76,17 @@
                     markAsInactive(settingsButton);
                 }
             }
+
+            // ------------------------------------------------------------------------//
+
+
+            var active = [[${tweetBoxActive}]];
+
+            if (active == true) {
+
+                var tweetBox = document.getElementById('tweetBox');
+                tweetBox.focus();
+            }
         };
 
         function markAsActive(button) {
