--- a/frontend/src/main/resources/templates/fragment/menu.html
+++ b/frontend/src/main/resources/templates/fragment/menu.html
@@ -75,7 +75,7 @@
                 </div>
 
                 <!-- Navbar Tweet Button -->
-                <button class="navbar-tweet-button">
+                <button class="navbar-tweet-button" onclick="document.location.href='/home?tweets=friends&tweet=true'">
                     <span class="navbar-tweet-buttont-text">Tweet</span>
                 </button>
             </div>
