--- a/frontend/src/main/resources/static/css/style.css
+++ b/frontend/src/main/resources/static/css/style.css
@@ -113,6 +113,11 @@ button:focus {
     font-size: 1em;
 }
 
+.bird-black {
+    color: #000000;
+    font-size: 1em;
+}
+
 /* Navbar Right Button Area */
 .navbar-right-box {
     display: inline-flex;
@@ -742,6 +747,19 @@ button:focus {
     padding-right: 0.35em;
 }
 
+.no-follow-container {
+    width: 100%;
+    height: 14em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.no-follow-text {
+    color: #657786;
+    font-weight: 500;
+    opacity: 0.7;
+}
 
 
 /************ PROFILE BOX ************/
@@ -915,6 +933,16 @@ button:focus {
 
 
 /************ TWEET BOX ************/
+
+.tweetbox-empty {
+    width: 36.8em;
+    background-color: white;
+    height: 3.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 0.09em solid #E6ECF0;
+}
 
 .tweetbox {
     width: 36.8em;
@@ -1571,6 +1599,27 @@ button:focus {
 
 }
 
+/*********** ERROR PAGE ***********/
+
+.error-container {
+    margin-top: 10em;
+}
+
+.error-text-container {
+    text-align: center;
+}
+
+.error-header {
+    color: white;
+    font-weight: 600;
+    font-size: 2em;
+}
+
+.error-text {
+    color: white;
+    font-weight: 300;
+    font-size: 1em;
+}
 
 
 
